refactor branches to to take intermediates argument and return a dict with arrays indexed by module that produced them, refactor simsiam and tests for compatibility

--- a/configs/simsiam/simsiam.yaml
+++ b/configs/simsiam/simsiam.yaml
@@ -58,15 +58,16 @@ modules:
         epsilon: 1e-5
      dtype: "float32"
 
-
 model:
   name: SSLModel
   branches:
     0:
       stop_gradient: False
       pipelines: ["0", "1"]
+      intermediate: ["head"]
       body: body1
       head: head1
+      pred: pred1
 
 
 loss:
