--- a/tests/train/conf/byol_test.yaml
+++ b/tests/train/conf/byol_test.yaml
@@ -18,7 +18,7 @@ env:
 trainer:
   name: SSLTrainer
 
-modules:
+module:
   body1:
     name: ResNet
     params:
@@ -67,7 +67,7 @@ modules:
 
 model:
   name: SSLModel
-  branches:
+  branch:
     0:
       stop_gradient: False
       pipelines: ["0"]
@@ -84,8 +84,8 @@ loss:
   name: cosine_similarity
   params: {}
 
-optimizers:
-  branches:
+optimizer:
+  branch:
     0:
       name: lars
       params:
@@ -95,8 +95,8 @@ optimizers:
         weight_decay_mask: True
         trust_ratio_mask: True
 
-schedulers:
-  branches:
+scheduler:
+  branch:
     0:
       learning_rate:
         name: byol_lr_schedule
@@ -126,12 +126,13 @@ post_process:
 
 meter:
   name: SSLMeter
+  params: {}
 
-pipelines:
+pipeline:
   # pre-augmentations should be computed in the dataloader
   # these typically include decode/centercrop, random crop+resize
   flatten: False
-  branches:
+  branch:
     0:
       augmentations:
         RandomFlip:
