--- a/tests/train/conf/mocov3_test.yaml
+++ b/tests/train/conf/mocov3_test.yaml
@@ -263,9 +263,10 @@ pipelines:
             x_max: 1
 
 data:
-  name: Base
-  params:
-    dataset_name: "mnist"
-    batch_size: 32
-    data_dtype_str: "float32"
-    dataset_configs: {}
+  pretraining:
+    name: Base
+    params:
+      dataset_name: "mnist"
+      batch_size: 32
+      data_dtype_str: "float32"
+      dataset_configs: {}
