Fix optimizer path filtering and byol yaml

--- a/tests/train/conf/byol_test.yaml
+++ b/tests/train/conf/byol_test.yaml
@@ -85,18 +85,18 @@ loss:
   params: {}
 
 optimizers:
-  branches:
-    0:
-      name: lars
-      params:
-        momentum: 0.9
-        trust_coefficient: 1e-3
-        weight_decay: 1.5e-6
-        weight_decay_mask: True
-        trust_ratio_mask: True
+  0:
+    name: lars
+    params:
+      momentum: 0.9
+      trust_coefficient: 1e-3
+      weight_decay: 1.5e-6
+      weight_decay_mask: True
+      trust_ratio_mask: True
+    inc_filters: ["body1*", "head1*", "pred1*"]
 
 schedulers:
-  branches:
+  opt_schedulers:
     0:
       learning_rate:
         name: byol_lr_schedule
